--- a/css/styles.css
+++ b/css/styles.css
@@ -13,21 +13,42 @@ h2, h3 {
     font-weight: 600;
 }
 img {
-    width: 100%;
+    width: 50%;
+}
+
+.main-header{
+    background-color: hotpink;
+    text-align: center;
+}   
+.main-nav {
+    list-style-type: none;
+    text-decoration: none;
+    display: block;
+
 }
 body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.4rem;
+    background-color:rgb(224, 224, 224)y;
+}
 
+.project {
+    text-align: center;
 }
 
 .container{
-   padding-left: 1em;
-   padding-right: 1em;
-}
+    padding: 3rem;
 
+}
+footer {
+    text-align: center;
+}
 /* MEDIA QUERIES*/
 @media (min-width: 320px) {
+    img {
+        width: 100%;
+        align-items: center;
+      }
     .container {
         width: 100%;
         max-width: 1000px;
