--- a/css/styles.css
+++ b/css/styles.css
@@ -1,57 +1,102 @@
-
-* {
+*{
     box-sizing: border-box;
+}
+.main-header{
+    text-align: center;
+    padding: 1em 0;
+    background-color: aqua;
+}   
+.main-nav {
+    font-weight: 800;
+    text-align: center;
+    list-style-type: none;
+    text-decoration: none;
+    display: block;
+    padding: 0;
 }
 
 .name {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
+    padding-top: 1em;
+    text-align: center;
 }
-
-h2, h3 {
+#profile {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+    text-transform: uppercase;
+    padding: 1rem 0;
+}
+h3 {
+
+    padding-top: 1rem;
 }
 img {
-    width: 50%;
+    width: 100%;
 }
-
-.main-header{
-    background-color: hotpink;
-    text-align: center;
-}   
-.main-nav {
-    list-style-type: none;
-    text-decoration: none;
-    display: block;
+#intro {
+    background-color: pink;
 
 }
+
+
+section {
+    padding: 3rem 0;
+    background-color: blanchedalmond;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
-    line-height: 1.4rem;
-    background-color:rgb(224, 224, 224)y;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 2rem;
+    background-color:rgb(218, 218, 218)y;
 }
 
-.project {
+.main-footer {
+    background-color: rgb(245, 245, 245);
     text-align: center;
-}
-
-.container{
-    padding: 3rem;
-
-}
-footer {
-    text-align: center;
+    padding: 1em 0;
 }
 /* MEDIA QUERIES*/
 @media (min-width: 320px) {
+
     img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         width: 100%;
-        align-items: center;
       }
-    .container {
-        width: 100%;
-        max-width: 1000px;
+      .container {
+        text-align: center;
+        width: 95%;
         margin: 0 auto;
+        max-width: 1000px;
     }
+
+}
+@media (min-width: 760px) {
+    .wrap {
+        min-height: 100vh - 89px;
+    }
+    
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+      }
+      .container {
+        text-align: left;
+        width: 100%;
+        margin: 0 auto;
+        max-width: 1000px;
+    }
+
 }
