--- a/css/styles.css
+++ b/css/styles.css
@@ -4,33 +4,16 @@
 head {
     margin: 0;
 }
+#intro {
+    background-color: #f5f5f5;
+    overflow: auto;
+
+}
 .main-header{
     text-align: center;
-}   
-.main-nav {
-    list-style-type: none;
-    text-decoration: none;
-    padding: 1em;
-    margin-top: 1em;
-    text-transform: uppercase;
 }
-li {
- padding: 5px;
-}
-a {
-    text-decoration: none;
-    color: darkgrey;
- }
-.main-nav a {
-    font-weight: 800;
-    text-align: center;
-    display: block;
-    background-color: white;
-    font-size: 1.125em;
-    padding: 1em;
-    border-spacing: 1em;
-    text-decoration: none;
-}
+
+
 .main-nav a:hover {
     color: blueviolet;
 }
@@ -56,6 +39,7 @@ h2 {
     font-size: 1em;
     text-transform: uppercase;
     padding: 40px;
+    padding-top: 4rem;
 }
 h3 {
     padding-top: 1rem;
@@ -64,17 +48,13 @@ p {
     margin: 20px;
      padding-bottom: 1rem;
 }
+.project {
+margin: 20px;
+}
 
 img {
     margin: 0;
     width: 100%;
-}
-#intro {
-    background-color: #f5f5f5;
-
-}
-.wrap{
-    background-color: lightgray;
 }
 
 body {
@@ -84,16 +64,64 @@ body {
     line-height: 2rem;
     background-color: rgb(218, 218, 218)y;
 }
-
+hr {
+    width: 90%;
+    color: red;
+}
+.contact{
+    padding-bottom: 3rem;
+}
 .main-footer {
-    border-top: 1px solid rgb(202, 202, 202);
-    border-length: 10px;
     background-color: rgb(245, 245, 245);
     text-align: center;
-    padding: 1em 0;
+
 }
+.align-left{
+    float: left;
+    margin: none;
+    padding: none;
+    font-weight: 600;
+    font-size: medium;
+}
+.align-right{
+    float: right;
+    margin: none;
+    padding: none;
+    font-weight: 600;
+    font-size: small;
+    text-transform: uppercase;
+}
+
+
 /* MEDIA QUERIES*/
 @media (min-width: 320px) {
+    .main-nav {
+        list-style-type: none;
+        text-decoration: none;
+        padding: 1em;
+        margin-top: 1em;
+        text-transform: uppercase;
+    }
+    
+    li {
+     padding: 5px;
+    }
+    
+    a {
+        text-decoration: none;
+        color: rgb(40, 40, 40);
+     }
+    .main-nav a {
+        font-weight: 800;
+        text-align: center;
+        display: block;
+        background-color: white;
+        font-size: 1.125em;
+        padding: 1em;
+        border-spacing: 1em;
+        text-decoration: none;
+    }
+    
 
     img {
         display: block;
@@ -116,9 +144,61 @@ body {
     }
 
 }
+
 @media (min-width: 760px) {
+    
+    .main-nav a {
+        font-weight: 400;
+        text-align: left;
+        font-size: 1em;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+
+    .container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        height: auto;
+        text-align: center;
+        font-size: 1em;
+        padding: 1em;
+        border-spacing: 1em;
+        text-decoration: none;
+    }
     .wrap {
         min-height: 100vh - 89px;
+    }
+    section {
+        text-align: left;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        height: 500px;
+        
+    }
+    
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
+      }
+      .container {
+        text-align: right;
+        width: 100%;
+        margin: 0 auto;
+        max-width: 1000px;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+}
+@media (min-width: 1024px) {
+    .wrap {
+        min-height: 100vh - 89px;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
     
     img {
