--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,76 @@
 *{
     box-sizing: border-box;
 }
+section {
+   padding: 2rem;
+   margin: auto 0;
+
+}
+text {
+    margin: 10px;
+}
 head {
     margin: 0;
 }
 #intro {
     background-color: #f5f5f5;
-    overflow: auto;
 
 }
-.main-header{
+.main-header,
+.main-nav {
+    display: flex;
+    flex-direction: column;
+}
+.main-nav {
+    list-style-type: none;
+    text-decoration: none;
+    padding: 1em;
+    margin: .2em;
+    text-transform: uppercase;
+}
+.container {
+   width: auto;
+}
+li {
+ padding: 5px;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(40, 40, 40);
+ }
+.main-nav a {
+    font-weight: 500;
+    display: block;
+    padding: 0 1em .5em 0;
+    margin: auto 0;
+    font-size: 1.125em;
+    border-spacing: auto;
+    text-decoration: none;
+}
+ul{
+    margin: 0 auto;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  h1 {
+      margin: auto 0;
+      padding: 0;
+  }
+body {
     text-align: center;
 }
-
 
 .main-nav a:hover {
     color: blueviolet;
 }
-.name {
+.site-logo {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    padding-top: 1em;
-    text-align: center;
-    margin: none;
+    font-weight: 900;
 }
 #profile {
     display: block;
@@ -33,6 +81,7 @@ head {
 h1 {
     text-decoration: none;
 }
+
 h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -49,7 +98,7 @@ p {
      padding-bottom: 1rem;
 }
 .project {
-margin: 20px;
+    margin: auto;
 }
 
 img {
@@ -62,7 +111,7 @@ body {
     font-weight: 300;
     font-size: 20px;
     line-height: 2rem;
-    background-color: rgb(218, 218, 218)y;
+    background-color: rgb(255, 255, 255)y;
 }
 hr {
     width: 90%;
@@ -91,127 +140,40 @@ hr {
     font-size: small;
     text-transform: uppercase;
 }
-
-
-/* MEDIA QUERIES*/
-@media (min-width: 320px) {
-    .main-nav {
-        list-style-type: none;
-        text-decoration: none;
-        padding: 1em;
-        margin-top: 1em;
-        text-transform: uppercase;
-    }
-    
-    li {
-     padding: 5px;
-    }
-    
-    a {
-        text-decoration: none;
-        color: rgb(40, 40, 40);
-     }
-    .main-nav a {
-        font-weight: 800;
-        text-align: center;
-        display: block;
-        background-color: white;
-        font-size: 1.125em;
-        padding: 1em;
-        border-spacing: 1em;
-        text-decoration: none;
-    }
-    
-
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;
-      }
-      h1{
-          margin: 0;
-          padding: 0;
-      }
-      .container {
-        text-align: center;
-        width: auto;
-        margin: 0 auto;
-        max-width: 1000px;
-    }
-    body {
-        text-align: center;
-    }
+#contact-2 {
+    background-color: #f5f5f5;
+    overflow: auto;
 
 }
+
+
 
 @media (min-width: 760px) {
-    
-    .main-nav a {
-        font-weight: 400;
-        text-align: left;
-        font-size: 1em;
-        background-color: transparent;
-        text-decoration: underline;
-    }
 
+    .main-nav, main-nav a{
+        flex-direction: row;
+        justify-content: space-between;
+    }
     .container{
+        padding: auto;
         display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        height: auto;
-        text-align: center;
-        font-size: 1em;
-        padding: 1em;
-        border-spacing: 1em;
-        text-decoration: none;
-    }
-    .wrap {
-        min-height: 100vh - 89px;
-    }
-    section {
+        flex-direction: row-reverse;
         text-align: left;
+    }
+    .project {
         display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        height: 500px;
-        
-    }
-    
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 20%;
-      }
-      .container {
-        text-align: right;
-        width: 100%;
-        margin: 0 auto;
-        max-width: 1000px;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
 
-}
-@media (min-width: 1024px) {
-    .wrap {
-        min-height: 100vh - 89px;
-        flex-direction: row;
-        flex-wrap: wrap;
     }
-    
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;
-      }
-      .container {
-        text-align: left;
-        width: 100%;
-        margin: 0 auto;
-        max-width: 1000px;
+    div {
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 1024px) {
+    .main-header, .main-nav, .a main-nav{
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: center !important;
     }
 
 }
