--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
 *{
     box-sizing: border-box;
     margin: auto;
-    padding: auto;
 }
+html{
+    scroll-behavior: smooth;
+    }
 section {
-   padding: 1rem;
+   padding: .5em;
    margin: auto 0;
-
 }
 text {
     margin: 10px;
@@ -16,7 +17,6 @@ head {
 }
 #intro {
     background-color: #f5f5f5;
-
 }
 .main-header,
 .main-nav {
@@ -27,7 +27,7 @@ head {
     list-style-type: none;
     text-decoration: none;
     padding: 1em;
-    margin: .2em;
+    margin: 2px;
     text-transform: uppercase;
 }
 .container {
@@ -42,6 +42,7 @@ li {
 a {
     text-decoration: none;
     color: rgb(40, 40, 40);
+    line-height: 35px;
  }
 .main-nav a {
     text-align: center;
@@ -51,9 +52,8 @@ a {
     font-size: 1.125em;
     border-spacing: 20px;
     text-decoration: none;
-
 }
-ul{
+ul {
     margin: 0 auto;
 }
 img {
@@ -64,13 +64,12 @@ img {
   }
   h1 {
       margin: auto 0;
-      padding: 0;
+      padding: 20px;
       text-decoration: none;
   }
 body {
     text-align: center;
 }
-
 .main-nav a:hover {
     color: blueviolet;
 }
@@ -82,7 +81,6 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
 }
 
 h2 {
@@ -90,26 +88,22 @@ h2 {
     font-weight: 600;
     font-size: 1em;
     text-transform: uppercase;
-    padding: 40px;
+    padding: 20px;
 }
 h3 {
-    padding-top: 1rem;
+    padding: 1rem;
 }
 p {
-    margin: 20px;
-     padding-bottom: 1rem;
+    margin: 7px;
+    padding-bottom: 1rem;
+    padding-top: .5rem;
 }
-
-img {
-    width: 100%;
-}
-
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 20px;
     line-height: 2rem;
-    background-color: rgb(255, 255, 255)y;
+    background-color: white;
 }
 hr {
     width: 90%;
@@ -121,19 +115,20 @@ hr {
 .main-footer {
     background-color: rgb(245, 245, 245);
     text-align: center;
-
+    padding: 0px;
+    
 }
 .align-left{
     float: left;
-    margin: none;
-    padding: none;
+    margin: 0;
+    padding: 0;
     font-weight: 600;
     font-size: medium;
 }
 .align-right{
     float: right;
-    margin: none;
-    padding: none;
+    margin: 0;
+    padding: 0;
     font-weight: 600;
     font-size: small;
     text-transform: uppercase;
@@ -141,23 +136,25 @@ hr {
 #contact-2 {
     background-color: #f5f5f5;
     overflow: auto;
-
 }
-
-
-
+footer{
+    margin-top: 10px;
+}
 @media (min-width: 760px) {
+    section {
+        padding: 2em;
+    }
+    
     li{
         background-color: transparent !important;
     }
-
     .main-nav, main-nav a{
         justify-content: center;
         flex-direction: row;
         background-color: transparent;
     }
     .container{
-        padding: auto;
+        padding: 0;
         display: flex;
         flex-direction: row-reverse;
         text-align: left;
@@ -167,6 +164,9 @@ hr {
         padding: 20px;
         margin: 0;
     }
+    #profile{
+        min-width: 350px;
+    }
 
   .project-2{
         display: flex;
@@ -174,12 +174,17 @@ hr {
         flex-wrap: wrap;
         margin: 0;
     }
+    .contact-info{
+        width: 800px;
+
+    }
 }
 
 @media (min-width: 1024px) {
     .main-header, .main-nav, .a main-nav{
         flex-direction: row;
         justify-content: space-between;
+        text-align: right;
     }
     .img-cap {
         max-width: 33.3333%;
