--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     margin: auto;
+    text-decoration: none !important;
 }
 html{
     scroll-behavior: smooth;
@@ -36,9 +37,12 @@ head {
 li {
  padding: 10px;
  margin: 5px;
- background-color: white;
+ text-align: top;
+ text-decoration: none !important;
 }
-
+.desktop-nav{
+ display: none;
+}
 a {
     text-decoration: none;
     color: rgb(40, 40, 40);
@@ -53,8 +57,10 @@ a {
     border-spacing: 20px;
     text-decoration: none;
 }
+
 ul {
     margin: 0 auto;
+    padding: 0;
 }
 img {
     display: block;
@@ -76,6 +82,7 @@ body {
 .site-logo {
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
+    margin: 0px;
 }
 #profile {
     display: block;
@@ -88,15 +95,14 @@ h2 {
     font-weight: 600;
     font-size: 1em;
     text-transform: uppercase;
-    padding: 20px;
+    padding: 30px;
 }
 h3 {
-    padding: 1rem;
+    padding-top: 1rem;
 }
 p {
     margin: 7px;
-    padding-bottom: 1rem;
-    padding-top: .5rem;
+    padding-bottom: 20px;
 }
 body {
     font-family: 'Montserrat', sans-serif;
@@ -110,12 +116,16 @@ hr {
     color: red;
 }
 .contact{
-    padding-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    margin: none;
+    
 }
 .main-footer {
     background-color: rgb(245, 245, 245);
     text-align: center;
     padding: 0px;
+    margin: 0px;
     
 }
 .align-left{
@@ -136,14 +146,34 @@ hr {
 #contact-2 {
     background-color: #f5f5f5;
     overflow: auto;
+    content: 40%;
 }
 footer{
     margin-top: 10px;
 }
+.main-footer, .listfooter{
+    display: flex;
+    flex-direction: row;
+    text-decoration: none !important;
+    justify-content: space-between;
+}
+.listfooter{
+    justify-content: space-between;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    font-weight: bold;
+    text-decoration: none !important;
+}
 @media (min-width: 760px) {
     section {
-        padding: 2em;
+        padding: 1em;
     }
+    .desktop-nav{
+        display: inline;
+       }
+    .mobile-nav {
+        display: none;
+       }
     
     li{
         background-color: transparent !important;
@@ -175,7 +205,8 @@ footer{
         margin: 0;
     }
     .contact-info{
-        width: 800px;
+        margin: 20px;
+        padding: 10px;
 
     }
 }
@@ -186,9 +217,17 @@ footer{
         justify-content: space-between;
         text-align: right;
     }
+    #intro{
+        padding: 2em;
+    }
+    .contact, .main-footer{
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: right;
+    }
     .img-cap {
         max-width: 33.3333%;
-        margin: 0;
+        margin: 0;    
     }
 
 }
