--- a/css/styles.css
+++ b/css/styles.css
@@ -103,11 +103,10 @@ h2 {
     padding: 30px;
 }
 h3 {
-    padding-top: 1rem;
+    padding-top: 1em;
 }
 p {
-    margin: 7px;
-    padding-bottom: 20px;
+    padding: 2em;
 }
 body {
     font-family: 'Montserrat', sans-serif;
