--- a/css/styles.css
+++ b/css/styles.css
@@ -104,9 +104,12 @@ h2 {
 }
 h3 {
     padding-top: 1em;
+    margin: 0;
 }
 p {
-    padding: 2em;
+    padding: 1em;
+    padding-top: 20px;
+    margin: 0;
 }
 body {
     font-family: 'Montserrat', sans-serif;
@@ -209,6 +212,9 @@ footer{
     .contact-info{
         max-width: 700px;
 
+    }
+    h4{
+        padding: 1em;
     }
 }
 
